// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Display/Logo Black 1`] = `
.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

.c1 {
  width: 250px;
  height: 100%;
  margin-left: -40px;
  -webkit-transform: translateY(-5pxs);
  -ms-transform: translateY(-5pxs);
  transform: translateY(-5pxs);
}

.c1 img {
  height: 100%;
  width: 100%;
}

<div
  className="c0"
>
  <div
    style={
      {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <img
        alt="HSD Mechatronics - Black Logo"
        src="test-file-stub"
        title="HSD Mechatronics - Black Logo"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Display/Logo Flat 1`] = `
.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

.c1 {
  width: 250px;
  height: 100%;
  margin-left: -40px;
  -webkit-transform: translateY(-5pxs);
  -ms-transform: translateY(-5pxs);
  transform: translateY(-5pxs);
}

.c1 img {
  height: 100%;
  width: 100%;
}

<div
  className="c0"
>
  <div
    style={
      {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <img
        alt="HSD Mechatronics - Flat Blue Logo"
        src="test-file-stub"
        title="HSD Mechatronics - Flat Blue Logo"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Display/Logo Gradient 1`] = `
.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

.c1 {
  width: 250px;
  height: 100%;
  margin-left: -40px;
  -webkit-transform: translateY(-5pxs);
  -ms-transform: translateY(-5pxs);
  transform: translateY(-5pxs);
}

.c1 img {
  height: 100%;
  width: 100%;
}

<div
  className="c0"
>
  <div
    style={
      {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <img
        alt="HSD Mechatronics - Gradient Logo"
        src="test-file-stub"
        title="HSD Mechatronics - Gradient Logo"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Display/Logo White 1`] = `
.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

.c1 {
  width: 250px;
  height: 100%;
  margin-left: -40px;
  -webkit-transform: translateY(-5pxs);
  -ms-transform: translateY(-5pxs);
  transform: translateY(-5pxs);
}

.c1 img {
  height: 100%;
  width: 100%;
}

<div
  className="c0"
>
  <div
    style={
      {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <img
        alt="HSD Mechatronics - White Logo"
        src="test-file-stub"
        title="HSD Mechatronics - White Logo"
      />
    </div>
  </div>
</div>
`;
